use pwrite64() instead of pwrite() when writing to file on Android

The issue was fixed in https://chromium-review.googlesource.com/578290
But was reintroduced by https://chromium-review.googlesource.com/834609.
This CL changes File::Write() to always use pwrite64 on Android.

The offset param for File::Write() is int64_t.
However, pwrite() takes a signed integer for offset.
As a result, File::Write() will not work for offset larger than 2GB.
Change to pwrite64() so it will work on 32bit legacy systems.
This issue is not present on Linux because __USE_FILE_OFFSET64 is set.

BUG=846276

Change-Id: Ie4fcc4749e9a04c691f61a0477feaf0fa1806923
Reviewed-on: https://chromium-review.googlesource.com/1081608
Commit-Queue: Min Qin <qinmin@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563891}
Former-commit-id: e9f43dc800c3fa3ba5acfeac80addc22d492d641